syntax = "proto3";

package staticpagepb;

import "buf/validate/validate.proto";
import "commonpb/ads_platform.proto";
import "commonpb/page_type.proto";
import "commonpb/seo.proto";
import "commonpb/status.proto";
import "google/protobuf/timestamp.proto";

// ========================
// ENTITY
// ========================

message StaticPage {
  uint64 id = 1;
  string title = 2 [(buf.validate.field).string.min_len = 1];
  string slug = 3 [(buf.validate.field).string.min_len = 1];
  string content = 4;
  commonpb.PageType page_type = 5 [(buf.validate.field).enum.defined_only = true];
  int32 sort_order = 6;
  optional commonpb.SEO seo = 7;
  commonpb.AdsPlatform ads_platform = 8 [(buf.validate.field).enum.defined_only = true];
  commonpb.Status status = 9 [(buf.validate.field).enum.defined_only = true];

  uint64 created_by = 10;
  uint64 updated_by = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;

  int32 deleted_version = 14;
}

// ========================
// CREATE
// ========================

message CreateRequest {
  StaticPage page = 1;
}

message CreateResponse {
  uint64 id = 1;
}

// ========================
// UPDATE (with field mask)
// ========================

message UpdateRequest {
  StaticPage page = 1;

  repeated string fields = 2;
}

message UpdateResponse {
  uint64 id = 1;
}

// ========================
// DELETE (batch)
// ========================

message DeleteRequest {
  repeated uint64 ids = 1;
  uint64 deleted_by = 2;
}

message DeleteResponse {
  repeated uint64 ids = 1;
}

// ========================
// LIST
// ========================

message ListRequest {
  // filters
  repeated uint64 ids = 1;
  string title = 2;
  string slug = 3;
  repeated commonpb.PageType page_types = 4;
  repeated commonpb.AdsPlatform ads_platforms = 5;
  repeated commonpb.Status statuses = 6;
  int32 deleted_version = 7;

  // sql select override
  string select = 8;

  // sorting: "created_at desc", "sortOrder asc", etc.
  string sort = 9;

  // pagination
  uint32 limit = 10;
  uint32 offset = 11;
}

message ListResponse {
  repeated StaticPage pages = 1;
  uint64 total = 2;
}

// ========================
// DETAIL (single)
// ========================

message GetRequest {
  uint64 id = 1;
  string slug = 2;

  // optionally override columns
  string select = 3;
}

message GetResponse {
  StaticPage page = 1;
}
